@@ -1,8 +1,8 @@
 pixdir = $(datadir)/mousetweaks
 pix_DATA =		 \
-	human-single.png \
-	human-double.png \
-	human-drag.png   \
-	human-right.png
+	single-click.png \
+	double-click.png \
+	drag-click.png   \
+	right-click.png
 
 EXTRA_DIST = $(pix_DATA)
